# discord-status-bot

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.arm-unknown-linux-gnueabihf  README  build.rs
.cargo/: config.toml
.github/workflows/: deploy.yml
src/: commands.rs  db.rs  log_models.json  log_models.proto  main.rs  models.rs  riot_utils.rs
test_data/: participant_template.json
tests/: NA1_4802938104.json
