[package]
name = "discord_status_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.30"
console-subscriber = "0.1.10"
futures = "0.3.28"
futures-util = "0.3.28"
http = "0.2.9"
reqwest = { version = "0.11.20", features = ["json"] }
riven = "2.24.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_derive = "1.0.188"
serde_json = "1.0.106"
serenity = { version = "0.11.6", features = ["rustls_backend", "cache", "client", "gateway", "builder", "chrono", "model", "http", "utils"], default-features = false }
tokio = { version = "1.32.0", features = ["full", "tracing"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.17"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
openssl = { version = "0.10.57", features = ["vendored"] }
jemallocator = "0.5.4"

[dev-dependencies]
tokio-test = "0.4.3"
